[gd_scene load_steps=13 format=3 uid="uid://0h1a46el5lr5"]

[ext_resource type="Theme" uid="uid://r2f327ecf0ef" path="res://scenes/ui/game_ui_theme.tres" id="1_j81fl"]
[ext_resource type="Texture2D" uid="uid://d61vnctd6lnr" path="res://assets/game/objects/basic_tools_and_materials.png" id="2_c0m57"]
[ext_resource type="Script" path="res://scenes/ui/tools_panel.gd" id="2_ehkpd"]
[ext_resource type="Texture2D" uid="uid://dx2rk67nj8ld2" path="res://assets/game/objects/basic_plants.png" id="3_c766h"]

[sub_resource type="AtlasTexture" id="AtlasTexture_etbxb"]
atlas = ExtResource("2_c0m57")
region = Rect2(16, 0, 16, 16)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_itsx6"]
load_path = "res://.godot/imported/basic_tools_and_materials.png-5fbfb155963b9fe96058cf82f108c264.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_eebro"]
atlas = SubResource("CompressedTexture2D_itsx6")
region = Rect2(32, 0, 16, 16)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_cditn"]
load_path = "res://.godot/imported/basic_tools_and_materials.png-5fbfb155963b9fe96058cf82f108c264.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_dm0ed"]
atlas = SubResource("CompressedTexture2D_cditn")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_se846"]
atlas = ExtResource("3_c766h")
region = Rect2(0, 0, 16, 16)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_wwvlo"]
load_path = "res://.godot/imported/basic_plants.png-95b9b15040aa30969080ee5e6985e7ef.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_ok1rc"]
atlas = SubResource("CompressedTexture2D_wwvlo")
region = Rect2(0, 16, 16, 16)

[node name="ToolsPanel" type="PanelContainer"]
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_j81fl")
theme_type_variation = &"DarkWoodPanel"
script = ExtResource("2_ehkpd")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ToolAxe" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
theme_type_variation = &"ToolButton"
icon = SubResource("AtlasTexture_etbxb")
icon_alignment = 1

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/ToolAxe"]
layout_mode = 0
offset_left = 2.0
offset_top = 1.0
offset_right = 42.0
offset_bottom = 24.0
theme_type_variation = &"HotkeyLabel"
text = "1"

[node name="ToolTilling" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
theme_type_variation = &"ToolButton"
icon = SubResource("AtlasTexture_eebro")
icon_alignment = 1

[node name="Label2" type="Label" parent="MarginContainer/HBoxContainer/ToolTilling"]
layout_mode = 0
offset_left = 2.0
offset_top = 1.0
offset_right = 42.0
offset_bottom = 24.0
theme_type_variation = &"HotkeyLabel"
text = "2"

[node name="ToolWatering" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
theme_type_variation = &"ToolButton"
icon = SubResource("AtlasTexture_dm0ed")
icon_alignment = 1

[node name="Label3" type="Label" parent="MarginContainer/HBoxContainer/ToolWatering"]
layout_mode = 0
offset_left = 2.0
offset_top = 1.0
offset_right = 42.0
offset_bottom = 24.0
theme_type_variation = &"HotkeyLabel"
text = "3"

[node name="ToolCorn" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
theme_type_variation = &"ToolButton"
icon = SubResource("AtlasTexture_se846")
icon_alignment = 1

[node name="Label4" type="Label" parent="MarginContainer/HBoxContainer/ToolCorn"]
layout_mode = 0
offset_left = 2.0
offset_top = 1.0
offset_right = 42.0
offset_bottom = 24.0
theme_type_variation = &"HotkeyLabel"
text = "4"

[node name="ToolTomato" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
theme_type_variation = &"ToolButton"
icon = SubResource("AtlasTexture_ok1rc")
icon_alignment = 1

[node name="Label5" type="Label" parent="MarginContainer/HBoxContainer/ToolTomato"]
layout_mode = 0
offset_left = 2.0
offset_top = 1.0
offset_right = 42.0
offset_bottom = 24.0
theme_type_variation = &"HotkeyLabel"
text = "5"

[connection signal="pressed" from="MarginContainer/HBoxContainer/ToolAxe" to="." method="_on_tool_axe_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/ToolTilling" to="." method="_on_tool_tilling_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/ToolWatering" to="." method="_on_tool_watering_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/ToolCorn" to="." method="_on_tool_corn_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/ToolTomato" to="." method="_on_tool_tomato_pressed"]
